# linkding-cn

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Makefile  README.md  bootstrap.sh  docker-compose.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.in  requirements.txt
.github/workflows/: build.yaml  main.yaml
bookmarks/: admin.py  apps.py  forms.py  middlewares.py  models.py  queries.py  tasks.py  urls.py  utils.py  widgets.py
bookmarks/api/: auth.py  routes.py  serializers.py
bookmarks/frontend/: index.js  shortcuts.js
bookmarks/migrations/: 0029_bookmark_list_actions_toast.py  0032_html_snapshots_hint_toast.py  0046_bookmarkbundle_show_count.py  0047_bookmark_preview_image_remote_url_and_more.py  0048_bookmark_is_deleted.py  0049_add_date_deleted_field.py  0049_userprofile_legacy_search.py  0050_add_trash_search_preferences_field.py  0050_new_search_toast.py  0051_userprofile_custom_domain_root.py  0052_bookmarkbundle_search_params.py  0053_userprofile_sticky_header_controls.py  0054_userprofile_sticky_side_panel.py  0055_bookmarkbundle_show_count.py  0056_bookmark_url_normalized.py  0057_populate_url_normalized_field.py  0058_userprofile_default_mark_shared.py  0059_userprofile_language.py  0060_userprofile_sidebar_modules.py  0061_alter_userprofile_language.py  0062_apitoken.py  0062_userprofile_legacy_search.py  0063_migrate_api_tokens.py  (+8 more)
docker/: alpine.Dockerfile  default.Dockerfile
docs/: i18n-maintenance.md
scripts/: build-docker.sh  set-version.sh  setup-ublock.sh
(+237 files in other folders)
